getLAstError works on mongos assert SERVER-1039